@@ -3875,13 +3875,13 @@ tests += \
 
 # ------------------------------------------------------------------------------
 
-rootlibexec_PROGRAMS += \
-	systemd-activate
+bin_PROGRAMS += \
+	systemd-socket-activate
 
-systemd_activate_SOURCES = \
+systemd_socket_activate_SOURCES = \
 	src/activate/activate.c
 
-systemd_activate_LDADD = \
+systemd_socket_activate_LDADD = \
 	libshared.la
 
 # ------------------------------------------------------------------------------
